# sigcheck

./: CMakeLists.txt  main.cpp  vcpkg.json
